# pseudo

./: .gitignore  README-SETUP.md  README.md  configs.json  pseudo.py  pyproject.toml
.github/workflows/: publish.yml
docs/: TECHNICAL.md
pseudo/: __init__.py
pseudo/app/: __init__.py
pseudo/app/static/css/: settings.css  styles.css
pseudo/app/static/js/: chat.js  model_select.js  settings.js  sidebar.js
pseudo/app/templates/: base.html  chat.html  index.html  settings.html
pseudo/core/: __init__.py  app.py  config.py  routes.py
pseudo/core/services/: __init__.py  chat_history.py  content_router.py  media_manager.py
static/: auto.py  save_media.py  styles.css
static/js/: chat.js  model_select.js  script.js  settings.js  sidebar.js
templates/: index.html  settings.html
tests/: gateway_test_results.csv  test_gateway.py
tests/plots/: explicit_less_detection.csv  explicit_moderate_detection.csv  explicit_very_detection.csv  test_id_reference.txt
