[tool.poetry]
name = "pseudo"
version = "0.1.0"
description = "Smart content router for AI-generated text, images, and audio"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pseudo"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
requests = "^2.32.0"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"

# Dependencies for various providers
openai = "^1.69.0"
anthropic = "^0.49.0"
elevenlabs = "^1.55.0"
stability-sdk = "^0.8.6"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
ruff = "^0.5.0"

[tool.poetry.scripts]
pseudo = "pseudo.core.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Ignore line length errors for now

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # Allow unused imports in test files
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files 